--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
+@import url('https://fonts.googleapis.com/css2?family=Sora&display=swap');
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Sora', sans-serif;
+}
+.item-button button {
+  margin-top: 20px;
+  width: 200px;
+  background-color: rgb(34, 78, 9);
+  color: white;
+}
+.spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+}
+.spinner-border {
+  height: 100px;
+  width: 100px;
+}
+.category {
+  border: 2px solid gray;
+  margin-right: 25px;
+  margin-bottom: 10px;
+  padding: 10px;
+  cursor: pointer;
+}
+.category img {
+  margin-left: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.category-active {
+  border: 2px solid green;
+}
+
+/* register page */
+.register {
+  display: flex;
+  /* box-shadow: rgba(0, 0, 0.35) 0px 5px 15px; */
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+}
+
+.register input {
+  width: 400px;
+}
+
+.register-form{
+  
 }
