--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,14 @@
 body {
   font-family: 'Sora', sans-serif;
 }
+
 .item-button button {
   margin-top: 20px;
   width: 200px;
   background-color: rgb(34, 78, 9);
   color: white;
 }
+
 .spinner {
   position: absolute;
   top: 50%;
@@ -16,10 +18,12 @@ body {
   transform: translate(-50%, -50%);
   z-index: 100;
 }
+
 .spinner-border {
   height: 100px;
   width: 100px;
 }
+
 .category {
   border: 2px solid gray;
   margin-right: 25px;
@@ -27,18 +31,20 @@ body {
   padding: 10px;
   cursor: pointer;
 }
+
 .category img {
   margin-left: 10px;
 }
 
 .category-active {
   border: 2px solid green;
+  background-color: rgba(128, 128, 128, 0.501);
 }
 
-/* register page */
+/* ========= register page ================ */
+
 .register {
   display: flex;
-  /* box-shadow: rgba(0, 0, 0.35) 0px 5px 15px; */
   align-items: center;
   flex-direction: column;
   justify-content: center;
@@ -46,9 +52,25 @@ body {
 }
 
 .register input {
-  width: 400px;
+  width: 400px !important;
 }
 
-.register-form{
-  
+.regsiter-form {
+  background-color: rgba(98, 197, 251, 0.463);
+  padding: 20px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.regsiter-form h1 {
+  text-align: center;
+  background-color: rgb(2, 2, 75);
+  color: white;
+  padding: 10px;
+}
+
+.regsiter-form h3 {
+  color: rgb(4, 4, 113);
+  text-align: center;
 }
